[ux] fix display issue with iframe on iphone

--- a/assets/static/css/main.css
+++ b/assets/static/css/main.css
@@ -45,7 +45,7 @@ h6 {
 h1,
 h2,
 h3 {
-  line-height: 1.2;
+  line-height: 1.2000000000000002;
 }
 h1 {
   font-size: 3rem;
@@ -264,6 +264,7 @@ button.button-large,
     -webkit-transform: translateY(-20px);
     transform: translateY(-20px);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
@@ -281,6 +282,7 @@ button.button-large,
     -ms-transform: translateY(-20px);
     transform: translateY(-20px);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
@@ -295,6 +297,7 @@ button.button-large,
     -ms-transform: translateY(-20px);
     transform: translateY(-20px);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
@@ -309,6 +312,22 @@ button.button-large,
     -ms-transform: translateY(-20px);
     transform: translateY(-20px);
   }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@-ms-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
@@ -323,6 +342,7 @@ button.button-large,
     -ms-transform: translateY(-20px);
     transform: translateY(-20px);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
